Clean up Bloomberg divergence from upstream 480 (#142)
* Clean up Bloomberg divergence from upstream 480

- Delete 4 duplicate session property manager test files and rewrite
  the remaining 2 to mirror upstream's structure with minimal Bloomberg
  changes (user_group_regex, FlywayMigration, raw SQL for DDL). Add
  Bloomberg customization comments to all modifications.
- Fix pre-existing Flyway teardown bug in TestDbSessionPropertyManager
  (flyway_schema_history not dropped between tests).
- Add missing flyway-mysql, flyway-database-postgresql, and
  mysql-connector-j runtime dependencies.
- Revert MemoryInfo/LocalMemoryManager to upstream — systemCpuLoad was
  adopted by upstream 480, making Bloomberg's changes redundant.
- Revert OpenSearchClient cosmetic merge conflict (Entry vs Map.Entry).

* fix jenkins

* fix tests

* remove local configs

* Upgrade Bloomberg server modules from Java 11 to Java 25

datalake-server-main, datalake-server-dev only run on the Trino server
which uses Java 25. Remove the targetJdk=11 override and skip-enforcer
so they inherit Java 25 from the root POM.

* Remove starburst-trino-protocol module

Bloomberg no longer has a partnership with Starburst, so this module
is no longer needed. Remove the module, its dependency declarations,
and the StarburstServerExtensionsModule from both server launchers.